# BIOF440

./: .gitignore  BIOF440.Rproj  Makefile  README.Rmd  _course.yml  _site.yml  index.Rmd  pyproject.toml  resources.Rmd  syllabus.Rmd
ForCanvas/: InstallAnaconda.md  JupyterLab.md  Weekly Schedule.md  Welcome.Rmd  index.Rmd  resources.Rmd  syllabus.Rmd  syllabus.html
Personal/: grades_Spring2021.R
assignments/HW/week4/: HW4.md  covid2021.csv
assignments/week4/: HW4.Rmd  HW4_solutions.py
assignments/week5/: HW5.Rmd
assignments/week6/: HW6.Rmd  HW6_solutions.py  style.css
docs/: Makefile  bio.html  bio.md  index.html  index.md  resources.html  resources.md  syllabus.html  syllabus.md
docs/ForCanvas/: BIOF440_Syllabus.docx  InstallAnaconda.html  JupyterLab.html  Weekly Schedule.html  Weekly-Schedule.html  Welcome.html  bio.html  index.html  resources.html  syllabus.Rmd  syllabus.html  syllabus_2021-Spring.html  syllabus_2021-Summer.html
docs/assignments/week2/: BIOF440_HW2.html  BIOF440_HW2.ipynb  BIOF440_HW2_Solution.html  BIOF440_HW2_Solution.ipynb  HW2.html  HW2.py  HW2_Solution.html  HW2_Solution.py
docs/assignments/week3/: HW3.html  HW3.ipynb  HW3.py  HW3_Solution.html  HW3_Solution.ipynb  HW3_Solution.py
docs/assignments/week4/: HW4.html  Week4_solutions.html  covid1.html  covid2.html  covid3.html
docs/notes/: jupytext.html  tipsntricks.html
docs/toplevel/: bio.html  bio.md  index.html  index.md  make_subdirs  resources.html  resources.md  syllabus.html  syllabus.md
lib/R/: update_header.R
notes/: Makefile  jupytext.Rmd  tipsntricks.Rmd
(+166 files in other folders)
