[tool.poetry]
name = "biof440"
version = "0.1.0"
description = ""
authors = ["Abhijit Dasgupta <aikidasgupta@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.2"
pandas = "^1.3.0"
seaborn = "^0.11.1"
jupyter = "^1.0.0"
plotly = "=5.1.0"
altair = "^4.1.0"
holoviews = "^1.14.4"
datashader = "^0.13.0"
jupyterlab = "^3.0.16"
ipywidgets = "^7.5"
lifelines = "^0.26.0"
scikit-learn = "^0.24.2"
vega-datasets = "^0.9.0"
folium = "^0.12.1"
igraph = "^0.1.14"
leidenalg = "^0.8.7"
jupyter-contrib-nbextensions = "^0.5.1"
jupyterlab-code-formatter = "^1.4.10"
orca = "^1.6"
statsmodels = "^0.12.2"
umap-learn = "^0.5.1"
ipykernel = "^6.0.3"
scanpy = {extras = ["leiden"], version = "^1.8.1"}
nbconvert = "^6.1.0"
pyhere = "^1.0.0"
kaplanmeier = "^0.1.4"
geopandas = "^0.9.0"
scikit-survival = "^0.15.0"
klib = "^0.1.5"
missingno = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
jupytext = "^1.11.3"
rise = "^5.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
